handle joke type

--- a/api/views/joke.hbs
+++ b/api/views/joke.hbs
@@ -15,6 +15,7 @@
                 <h1 class="text-5xl font-bold">{{joke.category}}</h1>
                 <p class="py-6">{{joke.setup}}</p>
                 <p class="py-6">{{joke.delivery}}</p>
+                <p class="py-6">{{joke.joke}}</p>
             </div>
         </div>
     </div>
