--- a/api/views/joke.hbs
+++ b/api/views/joke.hbs
@@ -10,6 +10,14 @@
 
 <body>
     <div class="hero min-h-screen bg-base-200">
+        <div class="stats shadow">
+
+            <div class="stat">
+                <div class="stat-title">API Version</div>
+                <div class="stat-value">{{version}}</div>
+            </div>
+
+        </div>
         <div class="hero-content text-center">
             <div class="max-w-md">
                 <h1 class="text-5xl font-bold">{{joke.category}}</h1>
