Added version into tests and start message (fix)

--- a/api/views/joke.hbs
+++ b/api/views/joke.hbs
@@ -9,15 +9,10 @@
 </head>
 
 <body>
+    <div class="navbar bg-base-100">
+  <a class="btn btn-ghost normal-case text-xl">API Version : {{version}}</a>
+</div>
     <div class="hero min-h-screen bg-base-200">
-        <div class="stats shadow">
-
-            <div class="stat">
-                <div class="stat-title">API Version</div>
-                <div class="stat-value">{{version}}</div>
-            </div>
-
-        </div>
         <div class="hero-content text-center">
             <div class="max-w-md">
                 <h1 class="text-5xl font-bold">{{joke.category}}</h1>
